--- a/src/components/CharecterItem/CharacterItem.css
+++ b/src/components/CharecterItem/CharacterItem.css
@@ -1,6 +1,7 @@
 .character-item {
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
     border-radius: 4px;
+    height: 100%;
 }
 .character-img {
     width: 100%;
@@ -17,6 +18,7 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
+    text-decoration: none;
 }
 .character-desc .species {
     color: rgba(0, 0, 0, 0.6);
