--- a/src/container/Main/Main.css
+++ b/src/container/Main/Main.css
@@ -3,7 +3,7 @@
     font-family: 'Roboto', sans-serif;
 }
 .container {
-    width: 1020px;
+    max-width: 1020px;
     margin: 0 auto;
     padding: 0px 15px;
 }
@@ -22,7 +22,35 @@
     margin-top: 50px;
     margin-bottom: 50px;
 }
-.characters-wrapper > a {
-    text-decoration: none;
-    color: black;
+
+/* Laptop */
+@media(max-width: 1200px) {
+    .characters-wrapper {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/* Tablet */
+@media(max-width: 992px) {
+    .logo {
+        width: 70%;
+    }
+}
+
+/* Mobile */
+@media(max-width: 576px) {
+    .container {
+        padding: 0px 24px;
+    }
+    .logo {
+        width: 100%;
+        margin-top: 92px;
+        margin-bottom: 32px;
+    }
+    .characters-wrapper {
+        grid-template-columns: 1fr;
+        margin-top: 32px;
+        gap: 32px;
+    }
+    
 }
